src/Parser/MxStarParser.java
package Parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MxStarParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
            T__31 = 32, T__32 = 33, T__33 = 34, NumericalConstant = 35, BoolConstant = 36, StringConstant = 37,
            NullConstant = 38, Class = 39, Void = 40, Bool = 41, Int = 42, String = 43, If = 44,
            Else = 45, For = 46, While = 47, Return = 48, Break = 49, Continue = 50, This = 51,
            True = 52, False = 53, Null = 54, New = 55, Identifier = 56, WhiteSpace = 57, NewLine = 58,
            BlockComment = 59, LineComment = 60;
    public static final int
            RULE_program = 0, RULE_programDefine = 1, RULE_classDefine = 2, RULE_variableDefine = 3,
            RULE_singleVariableDefine = 4, RULE_methodDefine = 5, RULE_constructorDefine = 6,
            RULE_functionDefine = 7, RULE_parameterList = 8, RULE_parameterDefine = 9,
            RULE_returnType = 10, RULE_type = 11, RULE_nonArrayType = 12, RULE_builtinType = 13,
            RULE_suite = 14, RULE_statement = 15, RULE_expression = 16, RULE_primary = 17,
            RULE_newType = 18, RULE_argumentList = 19, RULE_literal = 20;

    private static String[] makeRuleNames() {
        return new String[]{
                "program", "programDefine", "classDefine", "variableDefine", "singleVariableDefine",
                "methodDefine", "constructorDefine", "functionDefine", "parameterList",
                "parameterDefine", "returnType", "type", "nonArrayType", "builtinType",
                "suite", "statement", "expression", "primary", "newType", "argumentList",
                "literal"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'{'", "'}'", "';'", "','", "'='", "'('", "')'", "'['", "']'",
                "'.'", "'[&]'", "'->'", "'++'", "'--'", "'+'", "'-'", "'!'", "'~'", "'*'",
                "'/'", "'%'", "'<<'", "'>>'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='",
                "'&'", "'^'", "'|'", "'&&'", "'||'", null, null, null, null, "'class'",
                "'void'", "'bool'", "'int'", "'string'", "'if'", "'else'", "'for'", "'while'",
                "'return'", "'break'", "'continue'", "'this'", "'true'", "'false'", "'null'",
                "'new'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, "NumericalConstant",
                "BoolConstant", "StringConstant", "NullConstant", "Class", "Void", "Bool",
                "Int", "String", "If", "Else", "For", "While", "Return", "Break", "Continue",
                "This", "True", "False", "Null", "New", "Identifier", "WhiteSpace", "NewLine",
                "BlockComment", "LineComment"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "MxStar.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public MxStarParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ProgramContext extends ParserRuleContext {
        public TerminalNode EOF() {
            return getToken(MxStarParser.EOF, 0);
        }

        public List<ProgramDefineContext> programDefine() {
            return getRuleContexts(ProgramDefineContext.class);
        }

        public ProgramDefineContext programDefine(int i) {
            return getRuleContext(ProgramDefineContext.class, i);
        }

        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_program;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).enterProgram(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).exitProgram(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxStarVisitor) return ((MxStarVisitor<? extends T>) visitor).visitProgram(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(45);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Class) | (1L << Void) | (1L << Bool) | (1L << Int) | (1L << String) | (1L << Identifier))) != 0)) {
                    {
                        {
                            setState(42);
                            programDefine();
                        }
                    }
                    setState(47);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(48);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ProgramDefineContext extends ParserRuleContext {
        public ClassDefineContext classDefine() {
            return getRuleContext(ClassDefineContext.class, 0);
        }

        public VariableDefineContext variableDefine() {
            return getRuleContext(VariableDefineContext.class, 0);
        }

        public FunctionDefineContext functionDefine() {
            return getRuleContext(FunctionDefineContext.class, 0);
        }

        public ProgramDefineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_programDefine;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).enterProgramDefine(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).exitProgramDefine(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxStarVisitor) return ((MxStarVisitor<? extends T>) visitor).visitProgramDefine(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgramDefineContext programDefine() throws RecognitionException {
        ProgramDefineContext _localctx = new ProgramDefineContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_programDefine);
        try {
            setState(53);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(50);
                    classDefine();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(51);
                    variableDefine();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(52);
                    functionDefine();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ClassDefineContext extends ParserRuleContext {
        public Token className;

        public TerminalNode Class() {
            return getToken(MxStarParser.Class, 0);
        }

        public TerminalNode Identifier() {
            return getToken(MxStarParser.Identifier, 0);
        }

        public List<VariableDefineContext> variableDefine() {
            return getRuleContexts(VariableDefineContext.class);
        }

        public VariableDefineContext variableDefine(int i) {
            return getRuleContext(VariableDefineContext.class, i);
        }

        public List<MethodDefineContext> methodDefine() {
            return getRuleContexts(MethodDefineContext.class);
        }

        public MethodDefineContext methodDefine(int i) {
            return getRuleContext(MethodDefineContext.class, i);
        }

        public ClassDefineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_classDefine;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).enterClassDefine(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).exitClassDefine(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxStarVisitor) return ((MxStarVisitor<? extends T>) visitor).visitClassDefine(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ClassDefineContext classDefine() throws RecognitionException {
        ClassDefineContext _localctx = new ClassDefineContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_classDefine);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(55);
                match(Class);
                setState(56);
                ((ClassDefineContext) _localctx).className = match(Identifier);
                setState(57);
                match(T__0);
                setState(62);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Void) | (1L << Bool) | (1L << Int) | (1L << String) | (1L << Identifier))) != 0)) {
                    {
                        setState(60);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
                            case 1: {
                                setState(58);
                                variableDefine();
                            }
                            break;
                            case 2: {
                                setState(59);
                                methodDefine();
                            }
                            break;
                        }
                    }
                    setState(64);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(65);
                match(T__1);
                setState(66);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VariableDefineContext extends ParserRuleContext {
        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public List<SingleVariableDefineContext> singleVariableDefine() {
            return getRuleContexts(SingleVariableDefineContext.class);
        }

        public SingleVariableDefineContext singleVariableDefine(int i) {
            return getRuleContext(SingleVariableDefineContext.class, i);
        }

        public VariableDefineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_variableDefine;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).enterVariableDefine(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).exitVariableDefine(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxStarVisitor) return ((MxStarVisitor<? extends T>) visitor).visitVariableDefine(this);
            else return visitor.visitChildren(this);
        }
    }

    public final VariableDefineContext variableDefine() throws RecognitionException {
        VariableDefineContext _localctx = new VariableDefineContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_variableDefine);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(68);
                type(0);
                setState(69);
                singleVariableDefine();
                setState(74);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__3) {
                    {
                        {
                            setState(70);
                            match(T__3);
                            setState(71);
                            singleVariableDefine();
                        }
                    }
                    setState(76);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(77);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SingleVariableDefineContext extends ParserRuleContext {
        public Token variableName;

        public TerminalNode Identifier() {
            return getToken(MxStarParser.Identifier, 0);
        }

        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public SingleVariableDefineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_singleVariableDefine;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).enterSingleVariableDefine(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).exitSingleVariableDefine(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxStarVisitor) return ((MxStarVisitor<? extends T>) visitor).visitSingleVariableDefine(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SingleVariableDefineContext singleVariableDefine() throws RecognitionException {
        SingleVariableDefineContext _localctx = new SingleVariableDefineContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_singleVariableDefine);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(79);
                ((SingleVariableDefineContext) _localctx).variableName = match(Identifier);
                setState(82);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__4) {
                    {
                        setState(80);
                        match(T__4);
                        setState(81);
                        expression(0);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class MethodDefineContext extends ParserRuleContext {
        public ConstructorDefineContext constructorDefine() {
            return getRuleContext(ConstructorDefineContext.class, 0);
        }

        public FunctionDefineContext functionDefine() {
            return getRuleContext(FunctionDefineContext.class, 0);
        }

        public MethodDefineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_methodDefine;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).enterMethodDefine(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).exitMethodDefine(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxStarVisitor) return ((MxStarVisitor<? extends T>) visitor).visitMethodDefine(this);
            else return visitor.visitChildren(this);
        }
    }

    public final MethodDefineContext methodDefine() throws RecognitionException {
        MethodDefineContext _localctx = new MethodDefineContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_methodDefine);
        try {
            setState(86);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(84);
                    constructorDefine();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(85);
                    functionDefine();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ConstructorDefineContext extends ParserRuleContext {
        public Token className;

        public SuiteContext suite() {
            return getRuleContext(SuiteContext.class, 0);
        }

        public TerminalNode Identifier() {
            return getToken(MxStarParser.Identifier, 0);
        }

        public ConstructorDefineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_constructorDefine;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).enterConstructorDefine(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).exitConstructorDefine(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxStarVisitor) return ((MxStarVisitor<? extends T>) visitor).visitConstructorDefine(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ConstructorDefineContext constructorDefine() throws RecognitionException {
        ConstructorDefineContext _localctx = new ConstructorDefineContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_constructorDefine);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(88);
                ((ConstructorDefineContext) _localctx).className = match(Identifier);
                setState(89);
                match(T__5);
                setState(90);
                match(T__6);
                setState(91);
                suite();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FunctionDefineContext extends ParserRuleContext {
        public Token functionName;

        public ReturnTypeContext returnType() {
            return getRuleContext(ReturnTypeContext.class, 0);
        }

        public SuiteContext suite() {
            return getRuleContext(SuiteContext.class, 0);
        }

        public TerminalNode Identifier() {
            return getToken(MxStarParser.Identifier, 0);
        }

        public ParameterListContext parameterList() {
            return getRuleContext(ParameterListContext.class, 0);
        }

        public FunctionDefineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_functionDefine;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).enterFunctionDefine(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).exitFunctionDefine(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxStarVisitor) return ((MxStarVisitor<? extends T>) visitor).visitFunctionDefine(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FunctionDefineContext functionDefine() throws RecognitionException {
        FunctionDefineContext _localctx = new FunctionDefineContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_functionDefine);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(93);
                returnType();
                setState(94);
                ((FunctionDefineContext) _localctx).functionName = match(Identifier);
                setState(95);
                match(T__5);
                setState(97);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Bool) | (1L << Int) | (1L << String) | (1L << Identifier))) != 0)) {
                    {
                        setState(96);
                        parameterList();
                    }
                }

                setState(99);
                match(T__6);
                setState(100);
                suite();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParameterListContext extends ParserRuleContext {
        public List<ParameterDefineContext> parameterDefine() {
            return getRuleContexts(ParameterDefineContext.class);
        }

        public ParameterDefineContext parameterDefine(int i) {
            return getRuleContext(ParameterDefineContext.class, i);
        }

        public ParameterListContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_parameterList;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).enterParameterList(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).exitParameterList(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxStarVisitor) return ((MxStarVisitor<? extends T>) visitor).visitParameterList(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ParameterListContext parameterList() throws RecognitionException {
        ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_parameterList);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(102);
                parameterDefine();
                setState(107);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__3) {
                    {
                        {
                            setState(103);
                            match(T__3);
                            setState(104);
                            parameterDefine();
                        }
                    }
                    setState(109);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParameterDefineContext extends ParserRuleContext {
        public Token parameterName;

        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public TerminalNode Identifier() {
            return getToken(MxStarParser.Identifier, 0);
        }

        public ParameterDefineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_parameterDefine;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).enterParameterDefine(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).exitParameterDefine(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxStarVisitor) return ((MxStarVisitor<? extends T>) visitor).visitParameterDefine(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ParameterDefineContext parameterDefine() throws RecognitionException {
        ParameterDefineContext _localctx = new ParameterDefineContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_parameterDefine);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(110);
                type(0);
                setState(111);
                ((ParameterDefineContext) _localctx).parameterName = match(Identifier);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ReturnTypeContext extends ParserRuleContext {
        public TerminalNode Void() {
            return getToken(MxStarParser.Void, 0);
        }

        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public ReturnTypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_returnType;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).enterReturnType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).exitReturnType(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxStarVisitor) return ((MxStarVisitor<? extends T>) visitor).visitReturnType(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ReturnTypeContext returnType() throws RecognitionException {
        ReturnTypeContext _localctx = new ReturnTypeContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_returnType);
        try {
            setState(115);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case Void:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(113);
                    match(Void);
                }
                break;
                case Bool:
                case Int:
                case String:
                case Identifier:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(114);
                    type(0);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TypeContext extends ParserRuleContext {
        public TypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_type;
        }

        public TypeContext() {
        }

        public void copyFrom(TypeContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ArrayTypeContext extends TypeContext {
        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public ArrayTypeContext(TypeContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).enterArrayType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).exitArrayType(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxStarVisitor) return ((MxStarVisitor<? extends T>) visitor).visitArrayType(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class NArrayTypeContext extends TypeContext {
        public NonArrayTypeContext nonArrayType() {
            return getRuleContext(NonArrayTypeContext.class, 0);
        }

        public NArrayTypeContext(TypeContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).enterNArrayType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxStarListener) ((MxStarListener) listener).exitNArrayType(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxStarVisitor) return ((MxStarVisitor<? extends T>) visitor).visitNArrayType(this);
            else return visitor.visitChildren(this);
        }
    }

    public final TypeContext type() throws RecognitionException {
        return type(0);
    }
